--- a/force-app/main/default/lwc/leadList/leadList.html
+++ b/force-app/main/default/lwc/leadList/leadList.html
@@ -3,12 +3,12 @@
         <div slot="actions">
             <lightning-button-group>
                 <lightning-button label="Edit"></lightning-button>
-                <lightning-button label="Delete"></lightning-button>
+                <lightning-button label="Delete" onclick={handleDelete}></lightning-button>
                 <lightning-button label="New"></lightning-button>
             </lightning-button-group>
         </div>
         <template if:true={leadList}>
-            <lightning-datatable data={leadList} columns={columns} key-field="Id" onrowselection={getSelectedId}>
+            <lightning-datatable data={leadList} columns={columns} key-field="Id" onrowselection={getSelectedRec}>
             </lightning-datatable>
         </template>
         <p>{selectedIds}</p>
